--- a/assets/index.css
+++ b/assets/index.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 56px;
+    overflow-x: hidden;
 }
 
 .navbar-scrolled {
@@ -50,6 +51,26 @@ body {
     background-color: red;
 }
 
+.text-content{
+    padding: 4%;
+    margin-top: 4%;
+}
+.text-content1{
+    margin-top: -4%;
+    margin-left: 5.5%;
+}
+.btn{
+    color: white;
+    background-color: #FF9247;
+    margin-top: -14%;
+}
+.btn:hover{
+    color: white !important;
+}
+.col-gambar{
+    margin-top:-30%;
+    margin-right: 5%
+}
 
 .container {
 display: flex;
