--- a/assets/index.css
+++ b/assets/index.css
@@ -4,6 +4,7 @@ body {
 }
 
 .navbar-scrolled {
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.8);
 }
