--- a/assets/product.css
+++ b/assets/product.css
@@ -2,6 +2,7 @@ body {
     padding-top: 56px;
 }
 .navbar-scrolled {
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.8);
 }
