sisa gambar+contact+about bre

--- a/assets/index.css
+++ b/assets/index.css
@@ -2,7 +2,12 @@ body {
     padding-top: 56px;
     overflow-x: hidden;
 }
-
+.word {
+    margin: auto;
+    color: #4EB542;
+    font: 700 normal 2.5em 'tahoma';
+    text-shadow: 5px 2px #222324, 2px 4px #222324, 3px 5px #222324;
+  }
 .navbar-scrolled {
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
