--- a/assets/product.css
+++ b/assets/product.css
@@ -27,11 +27,12 @@ body {
     width: auto;
     margin: auto;
 }
+
 .carousel-indicators [data-bs-target] {
     box-sizing: content-box;
     flex: 0 1 auto;
-    width: 12px; 
-    height: 12px;
+    width: 15px;
+    height: 15px;
     margin-right: 5px;
     margin-left: 5px;
     text-indent: -999px;
@@ -39,7 +40,7 @@ body {
     background-color: #fff;
     background-clip: padding-box;
     border: 0;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     opacity: 0.5;
     transition: opacity 0.6s ease;
 }
