--- a/assets/about.css
+++ b/assets/about.css
@@ -21,7 +21,7 @@ body {
 }
 
 .navbar-nav {
-    margin-left: -130%;
+    margin-left: -148%;
     display: flex;
     justify-content: center;
 }
@@ -37,98 +37,6 @@ footer {
     background-color: black;
     color: #FAFAFA
 }
-.yaptech-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-  }
-  
-.yaptech-overlay {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 97%;
-    height: 100%;
-    background-color: rgba(192, 192, 192, 0.68);
-    border-radius: 30px;
-}
-  
-
-.yaptech-header {
-    position: relative; 
-    top: 270px;
-    left: 40px;
-    width: 1201px;
-    height: 2240px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }  
-
-.yaptech-header h1 {
-    color: #FB1314;
-    font-size: 36px;
-    font-family: Epilogue;
-    font-weight: 600;
-    line-height: 48px;
-    word-wrap: break-word;
-}
-
-.yaptech-header p {
-    color: #202020;
-    font-size: 36px;
-    font-family: Epilogue;
-    font-weight: 600;
-    line-height: 48px;
-    word-wrap: break-word;
-}
-
-.yaptech-banner {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 1228px;
-    height: 383px;
-    border-radius: 20px;
-    margin-top: 56px; 
-}
-
-.yaptech-banner img {
-    width: 1040px;
-    height: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .yaptech-banner {
-    position: absolute;
-    top: 0;
-    left: 40px;
-    width: 1228px;
-    height: 383px;
-    border-radius: 20px;
-  }
-  
-
-.yaptech-banner h1 {
-    left: 359px;
-    top: 126px;
-    position: absolute;
-    text-align: center;
-    color: white;
-    font-size: 96px;
-    font-family: Mulish;
-    font-weight: 800;
-    line-height: 105.60px;
-    word-wrap: break-word;
-}
-
 #btn-top {
     display: none;
     position: fixed;
@@ -146,11 +54,43 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    }
 #btn-top i {
     font-size: 18px; 
     color: white;
 }
 #btn-top:hover {
     background-color: #555;
+}
+.title{
+    color: white;
+    text-align: center;
+}
+@media (max-width: 576px) {
+    .view {
+        width: 20%;
+        height: auto;
+    }
+
+    .text-content {
+        padding: 0.5%;
+        margin-top: 15%;
+    }
+
+    .navbar-nav {
+        margin-left: 0;
+        justify-content: space-around;
+    }
+
+    .navbar-nav .nav-item {
+        margin-right: 0;
+    }
+}
+@media (max-width: 1254px) {
+    .navbar-nav{
+        margin-left: -123%;
+    }
+    .s{
+        margin-top: -12%;
+    }
 }
