--- a/assets/about.css
+++ b/assets/about.css
@@ -37,29 +37,29 @@ footer {
     background-color: black;
     color: #FAFAFA
 }
-#btn-top {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: black;
-    color: white;
-    cursor: pointer;
-    border-radius: 50%; 
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-#btn-top i {
-    font-size: 18px; 
-    color: white;
+.icon-up {
+    margin-left: -.5rem;
+    margin-right: -.5rem;
 }
-#btn-top:hover {
+.back-to-top {
+display: none;
+position: fixed;
+bottom: 20px;
+right: 30px;
+z-index: 99;
+border: none;
+outline: none;
+background-color: black;
+color: white;
+cursor: pointer;
+border-radius: 50%; 
+width: 40px;
+height: 40px;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.back-to-top:hover {
     background-color: #555;
 }
 .title{
